--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.0.0",
 		"@neoconfetti/svelte": "^2.0.0",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.4.47",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.13",
 		"typescript": "^5.0.0"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"axios": "^1.3.5",
 		"showdown": "^2.1.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"vite": "^5.0.3"
 	},
 	"type": "module"
